--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Terry Cole Podcast Studio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, Helvetica, Arial, sans-serif;
+      line-height: 1.65;
+      max-width: 900px;
+      margin: auto;
+      padding: 1.25rem;
+      color: #222;
+    }
+
+    h1 {
+      font-size: 2.1rem;
+      border-bottom: 3px solid #990000;
+      padding-bottom: 0.25rem;
+    }
+
+    h2 {
+      font-size: 1.45rem;
+      margin-top: 2.25rem;
+      color: #990000;
+    }
+
+    .nav {
+      font-size: 0.95rem;
+      margin-bottom: 1.5rem;
+    }
+
+    .nav a {
+      text-decoration: none;
+      color: #555;
+      margin-right: 0.5rem;
+    }
+
+    .nav .current {
+      color: #990000;
+      font-weight: 600;
+    }
+
+    .callout {
+      background: #f7f7f7;
+      border-left: 5px solid #990000;
+      padding: 1rem 1.25rem;
+      margin: 1.5rem 0;
+    }
+
+    hr {
+      margin: 2.75rem 0;
+    }
+  </style>
+</head>
+
+<body>
+
+<div class="nav">
+  <a href="/" class="current">Home</a> ·
+  <a href="/about">About</a> ·
+  <a href="/shows">Shows</a> ·
+  <a href="/contact">Contact</a>
+</div>
+
+<hr>
+
+<h1>Terry Cole Podcast Studio</h1>
+
+<p><strong>Part of the Terry Cole Broadcast & Recording Studio.</strong></p>
+
+<p>
+The Terry Cole Podcast Studio is dedicated to preserving broadcast history while
+producing meaningful audio projects rooted in storytelling, legacy, and community voices.
+</p>
+
+<div class="callout">
+The studio serves as the audio home of the Terry Cole Broadcast & Recording Studio —
+honoring the past while supporting new recorded works.
+</div>
+
+<h2>Explore the Studio</h2>
+
+<ul>
+  <li>🎙️ Flagship archival series and preserved broadcasts</li>
+  <li>🎧 Ongoing institutional and community podcasts</li>
+  <li>🎚️ Original studio productions and collaborations</li>
+</ul>
+
+<p>
+Visit the <strong>Shows</strong> page to listen.
+</p>
+
+<hr>
+
+<p style="font-size:0.85rem;color:#555;">
+© Terry Cole Podcast Studio<br>
+Part of the Terry Cole Broadcast & Recording Studio
+</p>
+
+</body>
+</html>
