--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 
 <body>
 
-<div class="nav">
-  <a href="/" class="current">Home</a> ·
-  <a href="/about">About</a> ·
-  <a href="/shows">Shows</a> ·
-  <a href="/contact">Contact</a>
-</div>
+<nav>
+  <a href="/terrycolepodcaststudio/">Home</a> ·
+  <a href="/terrycolepodcaststudio/about.html">About</a> ·
+  <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
+  <a href="/terrycolepodcaststudio/contact.html">Contact</a>
+</nav>
 
 <hr>
 
