--- a/about.html
+++ b/about.html
@@ -55,11 +55,11 @@
   <div class="container">
 
     <nav>
-      <a href="index.html">Home</a> ·
-      <a class="active" href="about.html">About</a> ·
-      <a href="shows.html">Shows</a> ·
-      <a href="contact.html">Contact</a>
-    </nav>
+  <a href="/terrycolepodcaststudio/">Home</a> ·
+  <a href="/terrycolepodcaststudio/about.html">About</a> ·
+  <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
+  <a href="/terrycolepodcaststudio/contact.html">Contact</a>
+</nav>
 
     <h1>About the Studio</h1>
     <div class="rule"></div>
