--- a/shows.html
+++ b/shows.html
@@ -58,11 +58,11 @@
   <div class="container">
 
     <nav>
-      <a href="index.html">Home</a> ·
-      <a href="about.html">About</a> ·
-      <a class="active" href="shows.html">Shows</a> ·
-      <a href="contact.html">Contact</a>
-    </nav>
+  <a href="/terrycolepodcaststudio/">Home</a> ·
+  <a href="/terrycolepodcaststudio/about.html">About</a> ·
+  <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
+  <a href="/terrycolepodcaststudio/contact.html">Contact</a>
+</nav>
 
     <h1>Studio Shows</h1>
     <div class="rule"></div>
