--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Terry Cole Podcast Studio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
     body {
@@ -18,18 +18,18 @@
     .container {
       max-width: 900px;
       margin: 0 auto;
-      padding: 36px 24px;
+      padding: 40px 24px;
     }
 
     nav {
       font-size: 0.95rem;
-      margin-bottom: 32px;
+      margin-bottom: 36px;
     }
 
     nav a {
       text-decoration: none;
       color: #555;
-      margin-right: 10px;
+      margin-right: 12px;
     }
 
     nav a.active {
@@ -38,47 +38,46 @@
     }
 
     h1 {
-      font-size: 2.1rem;
+      font-size: 2.2rem;
       margin-bottom: 6px;
     }
 
     .subtitle {
       font-size: 0.95rem;
       color: #555;
-      margin-bottom: 20px;
+      margin-bottom: 18px;
     }
 
     .rule {
       border-bottom: 3px solid #8b0000;
-      margin: 16px 0 28px;
+      margin: 18px 0 32px;
     }
 
-    .intro {
-      font-size: 1.05rem;
-      max-width: 720px;
+    p {
+      max-width: 760px;
     }
 
     .callout {
       background: #f7f7f7;
       border-left: 5px solid #8b0000;
-      padding: 18px 22px;
-      margin: 36px 0;
+      padding: 22px 26px;
+      margin: 40px 0;
     }
 
     h2 {
-      font-size: 1.25rem;
+      font-size: 1.35rem;
       color: #8b0000;
-      margin-top: 40px;
+      margin-top: 44px;
     }
 
     ul {
-      margin-top: 12px;
       padding-left: 22px;
+      margin-top: 14px;
     }
 
     footer {
-      margin-top: 64px;
-      padding-top: 18px;
+      margin-top: 70px;
+      padding-top: 20px;
       border-top: 1px solid #ccc;
       font-size: 0.85rem;
       color: #555;
@@ -89,6 +88,7 @@
 <body>
   <div class="container">
 
+    <!-- Navigation -->
     <nav>
       <a class="active" href="/terrycolepodcaststudio/">Home</a> ·
       <a href="/terrycolepodcaststudio/about.html">About</a> ·
@@ -96,6 +96,7 @@
       <a href="/terrycolepodcaststudio/contact.html">Contact</a>
     </nav>
 
+    <!-- Header -->
     <h1>Terry Cole Podcast Studio</h1>
     <div class="subtitle">
       Part of the <strong>Terry Cole Broadcast &amp; Recording Studio</strong>.
@@ -103,14 +104,20 @@
 
     <div class="rule"></div>
 
-    <p class="intro">
+    <!-- Intro -->
+    <p>
       The Terry Cole Podcast Studio is dedicated to preserving and sharing the legacy of broadcaster Terry Cole through podcasts, recorded audio projects, and archival storytelling.
     </p>
 
-    <p class="intro">
-      Based in Ohio, the studio serves as a home for meaningful conversations, historical audio, and voices worth remembering.
+    <p>
+      Rooted in broadcast history and based in Ohio, the studio serves as a home for meaningful conversations, historical audio, and voices worth remembering.
     </p>
 
+    <p>
+      The studio also functions as the audio home of the Terry Cole Broadcast &amp; Recording Studio — honoring the past while supporting new recorded works rooted in storytelling, legacy, and community voices.
+    </p>
+
+    <!-- Listen & Learn -->
     <div class="callout">
       <h2>🎙️ Listen &amp; Learn</h2>
       <ul>
@@ -120,6 +127,19 @@
       </ul>
     </div>
 
+    <!-- Explore -->
+    <h2>Explore the Studio</h2>
+    <ul>
+      <li>🎙️ Flagship archival series and preserved broadcasts</li>
+      <li>🎧 Ongoing institutional and community podcasts</li>
+      <li>🎚️ Original studio productions and collaborations</li>
+    </ul>
+
+    <p>
+      Visit the <strong><a href="/terrycolepodcaststudio/shows.html">Shows</a></strong> page to listen.
+    </p>
+
+    <!-- Connect -->
     <h2>📡 Connect</h2>
     <p>
       Website:
@@ -130,8 +150,11 @@
       </a>
     </p>
 
+    <!-- Footer -->
     <footer>
-      <em>Broadcast legacy. Recorded with care.</em>
+      <em>Broadcast legacy. Recorded with care.</em><br><br>
+      © Terry Cole Podcast Studio<br>
+      Part of the Terry Cole Broadcast &amp; Recording Studio
     </footer>
 
   </div>
