--- a/contact.html
+++ b/contact.html
@@ -4,46 +4,76 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact · Terry Cole Podcast Studio</title>
+
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, Helvetica, Arial, sans-serif;
       margin: 0;
       background: #ffffff;
       color: #111;
-      line-height: 1.6;
+      line-height: 1.65;
     }
+
     .container {
       max-width: 900px;
       margin: 0 auto;
-      padding: 32px 24px;
+      padding: 40px 24px;
     }
+
+    nav {
+      font-size: 0.95rem;
+      margin-bottom: 36px;
+    }
+
     nav a {
       text-decoration: none;
       color: #555;
       margin-right: 12px;
     }
+
     nav a.active {
       color: #8b0000;
       font-weight: 600;
     }
+
     h1 {
-      font-size: 32px;
+      font-size: 2.2rem;
+      margin-bottom: 6px;
     }
+
     .rule {
       border-bottom: 3px solid #8b0000;
-      margin: 12px 0 24px;
+      margin: 18px 0 32px;
     }
+
+    p {
+      max-width: 760px;
+    }
+
+    h2 {
+      font-size: 1.35rem;
+      color: #8b0000;
+      margin-top: 44px;
+    }
+
+    ul {
+      padding-left: 22px;
+      margin-top: 14px;
+    }
+
     .callout {
-      border-left: 4px solid #8b0000;
       background: #f7f7f7;
-      padding: 16px 20px;
-      margin: 32px 0;
+      border-left: 5px solid #8b0000;
+      padding: 22px 26px;
+      margin: 36px 0;
     }
+
     footer {
-      margin-top: 60px;
+      margin-top: 70px;
       padding-top: 20px;
       border-top: 1px solid #ccc;
-      font-size: 14px;
+      font-size: 0.85rem;
       color: #555;
     }
   </style>
@@ -52,32 +82,67 @@
 <body>
   <div class="container">
 
+    <!-- Navigation -->
     <nav>
-  <a href="/terrycolepodcaststudio/">Home</a> ·
-  <a href="/terrycolepodcaststudio/about.html">About</a> ·
-  <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
-  <a href="/terrycolepodcaststudio/contact.html">Contact</a>
-</nav>
+      <a href="/terrycolepodcaststudio/">Home</a> ·
+      <a href="/terrycolepodcaststudio/about.html">About</a> ·
+      <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
+      <a class="active" href="/terrycolepodcaststudio/contact.html">Contact</a>
+    </nav>
 
+    <!-- Page Header -->
     <h1>Contact</h1>
     <div class="rule"></div>
 
     <p>
-      For questions, collaboration inquiries, or archival information:
+      The Terry Cole Podcast Studio welcomes inquiries related to its audio projects,
+      archival materials, and broadcast history.
     </p>
+
+    <!-- Get in Touch -->
+    <h2>📬 Get in Touch</h2>
 
     <div class="callout">
-      📧 <strong>Email:</strong><br>
-      bhamblin@terrycolepodcaststudio.com
+      <strong>Website</strong><br>
+      <a href="https://terrycolepodcaststudio.com">
+        https://terrycolepodcaststudio.com
+      </a>
+      <br><br>
+      <strong>Email</strong><br>
+      <a href="mailto:bhamblin@terrycolepodcaststudio.com">
+        bhamblin@terrycolepodcaststudio.com
+      </a>
     </div>
 
+    <!-- Submissions & Inquiries -->
+    <h2>🎙️ Submissions &amp; Inquiries</h2>
+
     <p>
-      The Terry Cole Podcast Studio welcomes thoughtful projects aligned with broadcast history, community storytelling, and purposeful audio work.
+      If you have:
     </p>
 
+    <ul>
+      <li>Historical recordings or broadcast materials related to Terry Cole</li>
+      <li>Information that may support the preservation of radio history</li>
+      <li>Questions about existing audio projects</li>
+    </ul>
+
+    <p>
+      Please reach out by email. All messages are reviewed.
+    </p>
+
+    <!-- Location -->
+    <h2>📍 Location</h2>
+
+    <p>
+      The Terry Cole Podcast Studio is based in <strong>Ohio, United States</strong>.
+    </p>
+
+    <!-- Footer -->
     <footer>
+      <em>Broadcast legacy. Recorded with care.</em><br><br>
       © Terry Cole Podcast Studio<br>
-      Part of the Terry Cole Broadcast & Recording Studio
+      Part of the Terry Cole Broadcast &amp; Recording Studio
     </footer>
 
   </div>
