--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About · Terry Cole Podcast Studio</title>
-  <link rel="stylesheet" href="styles.css">
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -17,6 +16,9 @@
       max-width: 900px;
       margin: 0 auto;
       padding: 32px 24px;
+    }
+    nav {
+      margin-bottom: 24px;
     }
     nav a {
       text-decoration: none;
@@ -55,11 +57,11 @@
   <div class="container">
 
     <nav>
-  <a href="/terrycolepodcaststudio/">Home</a> ·
-  <a href="/terrycolepodcaststudio/about.html">About</a> ·
-  <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
-  <a href="/terrycolepodcaststudio/contact.html">Contact</a>
-</nav>
+      <a href="/terrycolepodcaststudio/">Home</a> ·
+      <a href="/terrycolepodcaststudio/about.html" class="active">About</a> ·
+      <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
+      <a href="/terrycolepodcaststudio/contact.html">Contact</a>
+    </nav>
 
     <h1>About the Studio</h1>
     <div class="rule"></div>
@@ -72,8 +74,12 @@
       Named in honor of broadcaster Terry Cole, the studio serves as both an archival space and a living production environment — connecting past broadcasts with new voices and contemporary audio projects.
     </p>
 
+    <p>
+      The Terry Cole Podcast Studio is dedicated to preserving and sharing the legacy of broadcaster Terry Cole through podcasts, recorded audio projects, and archival storytelling. Based in Ohio, the studio serves as a home for meaningful conversations, historical audio, and voices worth remembering.
+    </p>
+
     <div class="callout">
-      This studio exists to ensure meaningful voices, local history, and broadcast craftsmanship are preserved with care and intention.
+      This studio exists to ensure meaningful voices, local history, and broadcast craftsmanship are preserved with care and intention — honoring the past while supporting new recorded works.
     </div>
 
     <p>
@@ -82,7 +88,8 @@
 
     <footer>
       © Terry Cole Podcast Studio<br>
-      Part of the Terry Cole Broadcast & Recording Studio
+      Part of the Terry Cole Broadcast & Recording Studio<br><br>
+      <em>Broadcast legacy. Recorded with care.</em>
     </footer>
 
   </div>
