--- a/about.html
+++ b/about.html
@@ -87,11 +87,11 @@
     </p>
 
     <footer>
+      <em>Broadcast legacy. Recorded with care.</em><br><br>
       © Terry Cole Podcast Studio<br>
-      Part of the Terry Cole Broadcast & Recording Studio<br><br>
-      <em>Broadcast legacy. Recorded with care.</em>
+      Part of the Terry Cole Broadcast &amp; Recording Studio
     </footer>
-
+    
   </div>
 </body>
 </html>
