--- a/index.html
+++ b/index.html
@@ -88,15 +88,28 @@
 <body>
   <div class="container">
 
-    <!-- Navigation -->
-    <nav>
-      <a class="active" href="/terrycolepodcaststudio/">Home</a> ·
-      <a href="/terrycolepodcaststudio/about.html">About</a> ·
-      <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
+    <header class="site-header">
+  <div class="nav-container">
+
+    <div class="brand">
+      <img
+        src="/terrycolepodcaststudio/assets/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+        alt="Terry Cole Podcast Studio logo"
+        class="logo"
+      />
+      <span class="brand-name">Terry Cole Podcast Studio</span>
+    </div>
+
+    <nav class="nav-links">
+      <a href="/terrycolepodcaststudio/" class="active">Home</a>
+      <a href="/terrycolepodcaststudio/about.html">About</a>
+      <a href="/terrycolepodcaststudio/shows.html">Shows</a>
       <a href="/terrycolepodcaststudio/contact.html">Contact</a>
     </nav>
 
-    <!-- Header -->
+  </div>
+</header>
+
     <h1>Terry Cole Podcast Studio</h1>
     <div class="subtitle">
       Part of the <strong>Terry Cole Broadcast &amp; Recording Studio</strong>.
