--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
       margin-top: 14px;
     }
 
+.logo {
+  height: 48px;
+  max-height: 48px;
+  width: auto;
+  display: block;
+}
+
     footer {
       margin-top: 70px;
       padding-top: 20px;
