--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
     <!-- Header -->
     <header class="site-header">
       <div class="branding">
-        img
+        <img
   src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
   alt="Terry Cole Podcast Studio logo"
-  class="logo"
+  class="site-logo"
 />
         <div class="site-title">
           <h1>Terry Cole Podcast Studio</h1>
