--- a/index.html
+++ b/index.html
@@ -97,6 +97,26 @@
       font-size: 14px;
       color: #555;
     }
+    @media (max-width: 640px) {
+  .branding {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 8px;
+  }
+
+  .site-logo {
+    width: 72px; /* slightly larger on mobile for readability */
+  }
+
+  .site-title h1 {
+    font-size: 18px;
+  }
+
+  .site-parent {
+    font-size: 13px;
+  }
+}
   </style>
 </head>
 
