--- a/about.html
+++ b/about.html
@@ -50,6 +50,37 @@
       font-size: 14px;
       color: #555;
     }
+    @media (max-width: 640px) {
+  .branding {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 8px;
+  }
+
+  .site-logo {
+    width: 72px;
+    height: auto;
+  }
+
+  .site-title h1 {
+    font-size: 18px;
+  }
+
+  .site-parent {
+    font-size: 13px;
+  }
+
+  .site-nav {
+    margin-top: 12px;
+    text-align: center;
+  }
+
+  .site-nav a {
+    margin: 0 8px;
+    display: inline-block;
+  }
+}
   </style>
 </head>
 
