--- a/about.html
+++ b/about.html
@@ -86,7 +86,22 @@
 
 <body>
   <div class="container">
-
+<!-- Header -->
+    <header class="site-header">
+      <div class="branding">
+        <img
+  src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+  alt="Terry Cole Podcast Studio logo"
+  class="site-logo"
+/>
+        <div class="site-title">
+          <h1>Terry Cole Podcast Studio</h1>
+          <p class="site-parent">
+            Part of the Terry Cole Broadcast &amp; Recording Studio
+          </p>
+        </div>
+      </div>
+      
     <nav>
       <a href="/terrycolepodcaststudio/">Home</a> ·
       <a href="/terrycolepodcaststudio/about.html" class="active">About</a> ·
