--- a/about.html
+++ b/about.html
@@ -12,83 +12,37 @@
       color: #111;
       line-height: 1.6;
     }
-
     .container {
       max-width: 900px;
       margin: 0 auto;
       padding: 32px 24px;
     }
-
-    /* Header */
-    .site-header {
-      margin-bottom: 40px;
+    nav {
+      margin-bottom: 24px;
     }
-
-    .branding {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      margin-bottom: 12px;
-    }
-
-    .site-logo {
-      width: 64px;
-      height: auto;
-    }
-
-    .site-title h1 {
-      margin: 0;
-      font-size: 20px;
-      font-weight: 700;
-    }
-
-    .site-parent {
-      margin: 2px 0 0;
-      font-size: 14px;
-      color: #555;
-    }
-
-    /* Navigation */
-    .site-nav a {
+    nav a {
       text-decoration: none;
       color: #555;
-      margin-right: 14px;
-      font-size: 15px;
+      margin-right: 12px;
     }
-
-    .site-nav a.active {
+    nav a.active {
       color: #8b0000;
       font-weight: 600;
     }
-
-    /* Headings */
-    h2 {
-      font-size: 28px;
-      margin-top: 0;
+    h1 {
+      font-size: 32px;
+      margin-bottom: 8px;
     }
-
     .rule {
       border-bottom: 3px solid #8b0000;
       margin: 12px 0 24px;
     }
-
-    /* Callout */
     .callout {
       border-left: 4px solid #8b0000;
       background: #f7f7f7;
       padding: 16px 20px;
       margin: 32px 0;
     }
-
-    /* Lists */
-    ul {
-      padding-left: 20px;
-    }
-
-    li {
-      margin-bottom: 8px;
-    }
-
     footer {
       margin-top: 60px;
       padding-top: 20px;
@@ -96,49 +50,12 @@
       font-size: 14px;
       color: #555;
     }
-    @media (max-width: 640px) {
-  .branding {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 8px;
-  }
-
-  .site-logo {
-    width: 72px; /* slightly larger on mobile for readability */
-  }
-
-  .site-title h1 {
-    font-size: 18px;
-  }
-
-  .site-parent {
-    font-size: 13px;
-  }
-}
   </style>
 </head>
 
 <body>
   <div class="container">
 
-    <!-- Header -->
-    <header class="site-header">
-      <div class="branding">
-        <img
-  src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
-  alt="Terry Cole Podcast Studio logo"
-  class="site-logo"
-/>
-        <div class="site-title">
-          <h1>Terry Cole Podcast Studio</h1>
-          <p class="site-parent">
-            Part of the Terry Cole Broadcast &amp; Recording Studio
-          </p>
-        </div>
-      </div>
-
-      
     <nav>
       <a href="/terrycolepodcaststudio/">Home</a> ·
       <a href="/terrycolepodcaststudio/about.html" class="active">About</a> ·
