--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About · Terry Cole Podcast Studio</title>
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -12,37 +13,85 @@
       color: #111;
       line-height: 1.6;
     }
+
+    /* ===== Header / Navigation (MATCHES HOMEPAGE) ===== */
+    .site-header {
+      border-bottom: 1px solid #ddd;
+      background: #fff;
+    }
+
+    .header-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 16px 24px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 24px;
+      flex-wrap: wrap;
+    }
+
+    .branding {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .logo {
+      width: 48px;
+      height: auto;
+    }
+
+    .brand-text {
+      line-height: 1.2;
+    }
+
+    .site-title {
+      font-size: 18px;
+      font-weight: 700;
+    }
+
+    .site-subtitle {
+      font-size: 13px;
+      color: #555;
+    }
+
+    .main-nav a {
+      text-decoration: none;
+      color: #555;
+      margin-left: 16px;
+      font-weight: 500;
+    }
+
+    .main-nav a.active {
+      color: #8b0000;
+      font-weight: 700;
+    }
+
+    /* ===== Page Content ===== */
     .container {
       max-width: 900px;
       margin: 0 auto;
       padding: 32px 24px;
     }
-    nav {
-      margin-bottom: 24px;
-    }
-    nav a {
-      text-decoration: none;
-      color: #555;
-      margin-right: 12px;
-    }
-    nav a.active {
-      color: #8b0000;
-      font-weight: 600;
-    }
+
     h1 {
       font-size: 32px;
       margin-bottom: 8px;
     }
+
     .rule {
       border-bottom: 3px solid #8b0000;
       margin: 12px 0 24px;
     }
+
     .callout {
       border-left: 4px solid #8b0000;
       background: #f7f7f7;
       padding: 16px 20px;
       margin: 32px 0;
     }
+
     footer {
       margin-top: 60px;
       padding-top: 20px;
@@ -50,24 +99,62 @@
       font-size: 14px;
       color: #555;
     }
+
+    /* ===== Mobile tweaks ===== */
+    @media (max-width: 700px) {
+      .header-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .main-nav {
+        margin-top: 8px;
+      }
+
+      .main-nav a {
+        margin-left: 0;
+        margin-right: 16px;
+      }
+    }
   </style>
 </head>
 
 <body>
-  <div class="container">
 
-    <nav>
-      <a href="/terrycolepodcaststudio/">Home</a> ·
-      <a href="/terrycolepodcaststudio/about.html" class="active">About</a> ·
-      <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
-      <a href="/terrycolepodcaststudio/contact.html">Contact</a>
-    </nav>
+  <!-- ===== Shared Header ===== -->
+  <header class="site-header">
+    <div class="header-inner">
+      <div class="branding">
+        <img
+          src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+          alt="Terry Cole Broadcast & Recording Studio logo"
+          class="logo"
+        />
+        <div class="brand-text">
+          <div class="site-title">Terry Cole Podcast Studio</div>
+          <div class="site-subtitle">
+            Part of the Terry Cole Broadcast &amp; Recording Studio
+          </div>
+        </div>
+      </div>
+
+      <nav class="main-nav">
+        <a href="/terrycolepodcaststudio/index.html">Home</a>
+        <a href="/terrycolepodcaststudio/about.html" class="active">About</a>
+        <a href="/terrycolepodcaststudio/shows.html">Shows</a>
+        <a href="/terrycolepodcaststudio/contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- ===== Page Content ===== -->
+  <div class="container">
 
     <h1>About the Studio</h1>
     <div class="rule"></div>
 
     <p>
-      The <strong>Terry Cole Podcast Studio</strong> is part of the Terry Cole Broadcast & Recording Studio, created to preserve, share, and continue a legacy rooted in radio, storytelling, and community service.
+      The <strong>Terry Cole Podcast Studio</strong> is part of the Terry Cole Broadcast &amp; Recording Studio, created to preserve, share, and continue a legacy rooted in radio, storytelling, and community service.
     </p>
 
     <p>
@@ -91,7 +178,7 @@
       © Terry Cole Podcast Studio<br>
       Part of the Terry Cole Broadcast &amp; Recording Studio
     </footer>
-    
+
   </div>
 </body>
 </html>
